<resources>
    <string name="app_name">Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="full_name">Họ tên</string>
    <string name="user_name">Tài khoản</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="already_have_an_account">Đã có tài khoản?</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="don_t_have_an_account">Chưa có tài khoản?</string>
    <string name="reset_password">Quên mật khẩu?</string>
    <string name="don_t_worry">Đừng lo lắng, chúng tôi chỉ cần \n địa chỉ email đã đăng ký của bạn!</string>
    <string name="go_back">&lt; Trở lại</string>
    <string name="forget_password">Đặt lại mật khẩu?</string>
    <string name="reset_passowrd">Đặt lại mất khẩu</string>
    <string name="check_password">Mật khẩu (ít nhất 6 kí tự)</string>
    <string name="library">Thư viện</string>
    <string name="home">Trang chủ</string>
    <string name="profile">Cá nhân</string>
    <string name="random_music">Phát ngẫu nhiên</string>
    <string name="now_playing">Bài hát đang phát</string>
    <string name="song_name">Tên bài hát</string>
    <string name="singer_name">Tên ca sĩ</string>
    <string name="music_for_you">Bài hát đã tải</string>
    <string name="text_search">Nhập từ khóa tìm kiếm</string>
    <string name="search">Tìm kiếm</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="mat_khau_info">Mật khẩu: ************</string>
    <string name="new_password">Nhập mật khẩu mới</string>
    <string name="confirm_password_new">Xác nhận thây đổi</string>
    <string name="password_me">Nhập mật khẩu của bạn</string>
    <string name="logout">Đăng Xuất</string>
</resources>