<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".Activities.SongPlayerActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layout_top_btn"
        android:background="@drawable/gradient_foreground"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/back_btn"
            android:src="@drawable/baseline_chevron_left"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="onBackPressed"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/back_btn"
            android:layout_toStartOf="@id/menu_btn"
            android:gravity="center_horizontal"
            android:text="@string/now_playing"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/menu_btn"
            android:src="@drawable/baseline_menu"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/card"
        android:layout_below="@+id/layout_top_btn">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:id="@+id/cover_art" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/imageViewGredient"
            android:src="@drawable/gradient_foreground"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:id="@+id/song_name"
        android:layout_below="@+id/card"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="40dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singer_name"
        android:id="@+id/artist_name"
        android:layout_below="@+id/song_name"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        
        android:ellipsize="end"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/ralative_layout_for_bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:background="@drawable/gradient_foreground">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_shuffle"
            android:src="@drawable/baseline_shuffle_off"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_prev"
            android:src="@drawable/baseline_skip_previous"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/play_pause"
            android:layout_marginEnd="16dp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_pause"
            android:src="@drawable/baseline_play"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:clickable="true"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_next"
            android:src="@drawable/baseline_skip_next"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/play_pause"
            android:layout_marginStart="16dp"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_repeat"
            android:src="@drawable/baseline_repeat_off"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/ralative_layout_for_bottom"
        android:layout_marginBottom="15dp"
        android:id="@+id/seek_bar_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/durationPlayed"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:id="@+id/durationTotal"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="true"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</RelativeLayout>